--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,61 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>The Daily Kitty</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="stylesheet" href="/screen.css" />
-  </head>
-  <body>
-    <h1 class="hello-world">Hello, World!</h1>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>The Daily Kitty</title>
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="stylesheet" href="/screen.css" />
+</head>
+
+<body>
+  <section>
+    <header>
+      <h1>The Daily Kitty</h1>
+    </header>
+    <nav class="top">
+      <ul>
+        <a>link1</a>
+        <a>link2</a>
+        <a>link3</a>
+        <a>link4</a>
+      </ul>
+    </nav>
+    <article>
+      <div>
+
+        <img src="images/kattty.jpg"/>
+        <h3>Kittehs of the Day</h3>
+        <ul>
+          <li>Spot</li>
+          <li>Adeline</li>
+          <li>Perspex</li> 
+          <li>Mr. Grumpy</li>
+        </ul>
+      </div>
+      <div>
+        <h2>Busy Kitteh Very Busy</h2>
+        <div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Massa id neque aliquam vestibulum morbi blandit. Enim neque volutpat ac tincidunt vitae semper. Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa eget. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Pellentesque id nibh tortor id aliquet lectus proin. Neque aliquam vestibulum morbi blandit cursus. Morbi tristique senectus et netus et malesuada fames ac. Donec adipiscing tristique risus nec feugiat in fermentum. Turpis egestas sed tempus urna et pharetra pharetra massa. Scelerisque varius morbi enim nunc faucibus a pellentesque sit amet. In dictum non consectetur a erat. Hac habitasse platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper. Venenatis cras sed felis eget velit aliquet sagittis. Vivamus arcu felis bibendum ut tristique et. Libero volutpat sed cras ornare arcu. Donec massa sapien faucibus et.</p>
+
+        </div>
+
+      </div>
+
+
+    </article>
+    <span></span>
+    <nav class="Bottem">
+      <ul>
+        <a>Subscribe</a>
+        <a>Pat the Editors</a>
+        <a>Send us Catnip</a>
+      </ul>
+    </nav>
+    
+  </section>
+</body>
+
 </html>
